examples/bad/in/02-01-arithmetic.see
void main() {
    int x = 1;
    int y = 1 + 9;
    printInt(2115 / (x + y * 2 - 21));

    return;
}